--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
+      - image: blackducksoftware/hub-imageinspector-ws-alpine:2.1.3
+      - image: blackducksoftware/hub-imageinspector-ws-centos:2.1.3
+      - image: blackducksoftware/hub-imageinspector-ws-ubuntu:2.1.3
     steps:
       - checkout
       - run:
@@ -17,3 +20,6 @@ jobs:
       - run:
           name: Run Detect
           command: apt-get -y update && apt-get -y install curl; bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --detect.docker.image=alpine:latest --detect.hub.signature.scanner.disabled --blackduck.hub.offline.mode=true --blackduck.hub.url=https://prd-int-hub01.dc2.lan --blackduck.hub.username=sysadmin --blackduck.hub.password=blackduck
+      - run:
+          name: Service health check
+          command: curl -i http://localhost:9002/health
