--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,8 @@ jobs:
           name: Print the Current Time
           command: date
       - run:
-          name: Install stuff
-          command: apt-get -y update && apt-get -y install curl
-      - run:
           name: Service health check
-          command: curl -i http://localhost:9002/health
-      - run:
-          name: Run Detect
-          command: bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --detect.docker.image=alpine:latest --detect.hub.signature.scanner.disabled --blackduck.hub.offline.mode=true --blackduck.hub.url=https://prd-int-hub01.dc2.lan --blackduck.hub.username=sysadmin --blackduck.hub.password=blackduck
+          command: apt-get -y update && apt-get -y install curl; curl -i http://localhost:9002/health
+      #- run:
+          #name: Run Detect
+          #command: bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --detect.docker.image=alpine:latest --detect.hub.signature.scanner.disabled --blackduck.hub.offline.mode=true --blackduck.hub.url=https://prd-int-hub01.dc2.lan --blackduck.hub.username=sysadmin --blackduck.hub.password=blackduck
