--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: date
       - run:
           name: Service health check
-          command: apt-get -y update && apt-get -y install curl; curl -i http://localhost:9002/health
+          command: sleep 60; curl -i http://localhost:9002/health
       #- run:
           #name: Run Detect
           #command: bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --detect.docker.image=alpine:latest --detect.hub.signature.scanner.disabled --blackduck.hub.offline.mode=true --blackduck.hub.url=https://prd-int-hub01.dc2.lan --blackduck.hub.username=sysadmin --blackduck.hub.password=blackduck
