--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,9 @@ machine:
     -docker
 jobs:
   build:
+    machine: true
     docker:
       - image: circleci/openjdk:8-jdk-browsers
-      - image: blackducksoftware/hub-imageinspector-ws-alpine:2.1.3
-      - image: blackducksoftware/hub-imageinspector-ws-centos:2.1.3
-      - image: blackducksoftware/hub-imageinspector-ws-ubuntu:2.1.3
     steps:
       - checkout
       - run:
@@ -19,7 +17,10 @@ jobs:
           command: date
       - run:
           name: Service health check
-          command: sleep 60; curl -i http://localhost:9002/health
+          command: |
+              docker run -d --name mysvc blackducksoftware/hub-imageinspector-ws-ubuntu:2.1.3
+              sleep 30
+              docker exec mysvc curl -i --retry 10 --retry-connrefused http://localhost:9002/health
       #- run:
           #name: Run Detect
           #command: bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --detect.docker.image=alpine:latest --detect.hub.signature.scanner.disabled --blackduck.hub.offline.mode=true --blackduck.hub.url=https://prd-int-hub01.dc2.lan --blackduck.hub.username=sysadmin --blackduck.hub.password=blackduck
