--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
               docker run -d --name ubuntusvc -p 8082:8082 blackducksoftware/hub-imageinspector-ws-ubuntu:2.2.0-SNAPSHOT
               sleep 30
               docker logs alpinesvc
-              echo Executing: docker exec ubuntusvc curl -i --retry 10 --retry-delay 15 http://localhost:8080/health
+              echo EXECUTING docker exec ubuntusvc curl -i --retry 10 --retry-delay 15 http://localhost:8080/health
               docker exec ubuntusvc curl -i --retry 10 --retry-delay 15 http://localhost:8080/health
               docker exec ubuntusvc curl -i --retry 10 --retry-delay 15 http://localhost:8081/health
               docker exec ubuntusvc curl -i --retry 10 --retry-delay 15 http://localhost:8082/health
