--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,5 +37,11 @@ jobs:
               export DETECT_DOCKER_PASSTHROUGH_DOCKER_INSPECTOR_VERSION=6.0.5-SNAPSHOT
               env
               bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --detect.docker.image=alpine:latest --detect.hub.signature.scanner.disabled=true --blackduck.hub.offline.mode=true --detect.docker.passthrough.imageinspector.service.url=http://localhost:8082
-              echo "Ubuntu service log:"
+      - run:
+          name: Build failed
+          when: on_fail
+          command: |
+              echo "============================ Ubuntu service log:"
               docker logs ubuntusvc
+              echo "============================ Alpine service log:"
+              docker logs alpinesvc
