--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Greeting
-          command: echo Hello, world.
-      - run:
-          name: Print the Current Time
-          command: date
-      - run:
           name: Run Detect
           command: |
-              export DETECT_DOCKER_PASSTHROUGH_DOCKER_INSPECTOR_VERSION=6.0.5-SNAPSHOT
-              env
+              ##export DETECT_DOCKER_PASSTHROUGH_DOCKER_INSPECTOR_VERSION=6.0.5-SNAPSHOT
               bash <(curl -s https://blackducksoftware.github.io/hub-detect/hub-detect.sh) --detect.docker.image=alpine:latest --detect.hub.signature.scanner.disabled=true --blackduck.hub.offline.mode=true --detect.docker.passthrough.imageinspector.service.start=true --logging.level.com.blackducksoftware.integration=DEBUG --detect.docker.passthrough.shared.dir.path.local=$(pwd)/shared
       - run:
           name: Build failed
